# learn_rust

./: 404.html  Cargo.toml  README.md  adata_types.rs  aoption_enum.rs  casbin.pptx  condition.rs  error.rs  hello.txt  hosts  loop.rs  main.rs  manager.rs  ownership.rs  print.rs  slice.rs  struct.rs  vpc.tf
a10_generic_traits_lifetime/: Cargo.toml
a10_generic_traits_lifetime/src/: get_max.rs  lifecycle.rs  lifetimes.rs  main.rs  trait.rs
a11_tests/: Cargo.toml
a11_tests/src/: main.rs
a11_tests/tests/: integration_test.rs
a12_command_line/: Cargo.toml
a12_command_line/src/: lib.rs  main.rs
a13_functional/: Cargo.toml
a13_functional/src/: main.rs
a14_cargo_crates/: Cargo.toml
a14_cargo_crates/src/: main.rs
a15_pointers/: Cargo.toml
a15_pointers/src/: main.rs
a16_concurrency/: Cargo.toml
a16_concurrency/src/: main.rs
a17_OOP/: Cargo.toml
a17_oop/: Cargo.toml
a17_oop/src/: blog.rs  main.rs
a18_patterns_matching/: Cargo.toml
a18_patterns_matching/src/: main.rs
a19_advaced_features/: Cargo.toml
a19_advaced_features/src/: main.rs  (+1 more)
a1_started/: Cargo.toml  main.rs
a20_webserver/: Cargo.toml
a21_appendix/: Cargo.toml
a2_guessing_game/: Cargo.toml  main.rs
a3_common_concepts/: Cargo.toml  condition.rs  fib.rs  loop.rs  main.rs
a4_ownership/: Cargo.toml  main.rs  slice.rs
a5_structs/: Cargo.toml  main.rs
a6_enums_match/: Cargo.toml  main.rs  option_enum.rs
a7_projects/: Cargo.toml
a7_projects/src/: lib.rs  main.rs  mod.rs  second_module.rs  use.rs
a7_projects/src/front_of_house/: hosting.rs
a8_common_collections/: Cargo.toml
a9_error/: Cargo.toml
collections/: map.rs  string.rs  vector.rs
file/: append_file.rs  cmd_args.rs  cmd_input.rs  read_file.rs  read_stream.rs  text.txt  write.txt  write_file.rs
genric/: genric.rs  get_max.rs
mod/: mod_use.rs  std_mod.rs  use.rs
src/: main.rs
tests/: a11.rs
(+8 files in other folders)
