[package]
name = "a7_projects"
version = "0.1.0"
authors = ["yangminyu <yangminyu@gosun.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "a7_projects"
path = "src/main.rs"

[lib]
name = "a7_projects"
path = "src/lib.rs"
